--- a/.editorconfig
+++ b/.editorconfig
@@ -5,7 +5,7 @@ end_of_line = lf
 insert_final_newline = true
 charset = utf-8
 
-[*.cpp]
+[*.{cpp,hpp,c,h}]
 indent_style = space
 indent_size = 2
 
