Create GLFW RAII wrapper
GLFW needs to be initialized before using it and terminated when we are
done with it. RAII wrapper ensures that GLFW is terminated on program
exit.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ include("${PROJECT_SOURCE_DIR}/dependencies/glfw3.cmake")
 
 add_executable(zen
     "src/main.cpp"
+    "src/glfw_library.cpp"
 )
 
 target_link_libraries(zen
