Add GLAD to the project
GLAD has been generated for OpenGL 2.1

--- a/src/meson.build
+++ b/src/meson.build
@@ -2,6 +2,7 @@ executable('zen',
   'main.cpp',
   'glfw_library.cpp',
   'ui/Window.cpp',
+  'gl/glad.c',
   dependencies: [
     opengl_dependencies,
     libGLFW
