Move glad.c to gl/glad/

--- a/src/meson.build
+++ b/src/meson.build
@@ -2,7 +2,7 @@ executable('zen',
   'main.cpp',
   'ui/glfw.cpp',
   'ui/Window.cpp',
-  'gl/glad.c',
+  'gl/glad/glad.c',
   dependencies: [
     opengl_dependencies,
     libGLFW
