Create facilities for OpenGL shader compilation

--- a/src/meson.build
+++ b/src/meson.build
@@ -3,6 +3,7 @@ executable('zen',
   'ui/glfw.cpp',
   'ui/Window.cpp',
   'gl/glad/glad.c',
+  'gl/shader.cpp',
   dependencies: [
     opengl_dependencies,
     libGLFW
