Modify VSCode workspace settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "editor.formatOnSave": true,
     "editor.formatOnSaveMode": "modifications",
-    "C_Cpp.autoAddFileAssociations": false
+    "C_Cpp.autoAddFileAssociations": false,
+    "mesonbuild.buildFolder": "build"
 }
