Create abstraction over OpenGL Vertex Array Object

--- a/src/meson.build
+++ b/src/meson.build
@@ -5,6 +5,7 @@ executable('zen',
   'gl/glad/glad.c',
   'gl/shader.cpp',
   'gl/shadercompiler.cpp',
+  'gl/vao.cpp',
   dependencies: [
     opengl_dependencies,
     libGLFW,
