Modify GLFW RAII wrapper
Failure of glfwInit() should be treated as irrecoverable error, as the
whole program depends on GLFW.

The src/lib/glfw/ directory should hold any further abstractions of GLFW

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,12 +1,12 @@
 executable('zen',
   'main.cpp',
-  'ui/glfw.cpp',
   'ui/Window.cpp',
   'gl/glad/glad.c',
   'gl/shader.cpp',
   'gl/shadercompiler.cpp',
   'gl/vao.cpp',
   'stb_image.c',
+  'lib/glfw/glfw.cpp',
   dependencies: [
     opengl_dependencies,
     libGLFW,
