Move GLRenderer out of main file

--- a/src/meson.build
+++ b/src/meson.build
@@ -7,6 +7,7 @@ executable('zen',
   'gl/vao.cpp',
   'stb_image.c',
   'lib/glfw/glfw.cpp',
+  'gl/renderer.cpp',
   dependencies: [
     opengl_dependencies,
     libGLFW,
