--- a/src/meson.build
+++ b/src/meson.build
@@ -3,11 +3,11 @@ executable('zen',
   'ui/window.cpp',
   'gl/glad/glad.c',
   'gl/shader.cpp',
-  'gl/shadercompiler.cpp',
   'gl/vao.cpp',
   'stb_image.c',
   'lib/glfw/glfw.cpp',
   'gl/renderer.cpp',
+  'render/texture.cpp',
   dependencies: [
     opengl_dependencies,
     libGLFW,
