--- a/src/meson.build
+++ b/src/meson.build
@@ -1,11 +1,11 @@
 executable('zen',
   'main.cpp',
   'ui/window.cpp',
-  'gl/glad/glad.c',
-  'gl/shader.cpp',
+  'render/glad/glad.c',
+  'render/glshader.cpp',
   'stb_image.c',
   'lib/glfw/glfw.cpp',
-  'gl/renderer.cpp',
+  'render/glrenderer.cpp',
   'render/texture.cpp',
   dependencies: [
     opengl_dependencies,
