Fix required meson_version string

--- a/meson.build
+++ b/meson.build
@@ -3,7 +3,7 @@ project('zen', ['c','cpp'],
     'cpp_std=c++20'
   ],
   license: 'Apache-2.0',
-  meson_version: '0.63.0>='
+  meson_version: '>=0.63.0'
 )
 
 doxygen = find_program('doxygen', required: false)
