--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,10 @@
     "editor.formatOnSave": true,
     "editor.formatOnSaveMode": "modifications",
     "C_Cpp.autoAddFileAssociations": false,
-    "mesonbuild.buildFolder": "build"
+    "mesonbuild.buildFolder": "build",
+    "C_Cpp.default.compileCommands": "build/vscode_compile_commands.json",
+    "C_Cpp.codeAnalysis.exclude": {
+        "${workspaceFolder}/src/include/**/*": true,
+        "${workspaceFolder}/src/stb_image.c": true
+    }
 }
