--- a/src/meson.build
+++ b/src/meson.build
@@ -4,12 +4,11 @@ zen_exe = executable('zen',
   'render/glad/glad.c',
   'render/glshader.cpp',
   'stb_image.c',
-  'lib/glfw.cpp',
   'render/glrenderer.cpp',
   'render/texturedata.cpp',
   dependencies: [
     opengl_dependencies,
-    libGLFW,
+    libSDL2,
     libfmt,
     libglm,
     libfontconfig,
