Provide clang-format run target
This also overrides the default clang-format target

--- a/meson.build
+++ b/meson.build
@@ -70,3 +70,11 @@ run_target('run',
   ],
   depends: zen_exe
 )
+
+run_target('clang-format',
+  command: [
+    python,
+    meson.project_source_root() / 'scripts' / 'clang-format.py',
+    '--format'
+  ]
+)
