--- a/.github/workflows/ci_readability_check.yml
+++ b/.github/workflows/ci_readability_check.yml
@@ -19,7 +19,7 @@ on:
 
 jobs:
   linux:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
     - uses: actions/checkout@v1
     - uses: actions/setup-python@v1
