--- a/.github/workflows/ci_readability_check.yml
+++ b/.github/workflows/ci_readability_check.yml
@@ -26,7 +26,7 @@ jobs:
       with:
         python-version: '3.x'
     - run: pip install meson ninja
-    - run: sudo apt-get install -y mesa-common-dev
+    - run: sudo apt-get install -y mesa-common-dev libsdl2-dev
     - run: meson setup builddir/
       env:
         CC: gcc
