--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,16 @@ subprojects/*/
 
 # Ignore CPython cache
 __pycache__/
+# Created by https://www.toptal.com/developers/gitignore/api/zig
+# Edit at https://www.toptal.com/developers/gitignore?templates=zig
+
+### zig ###
+# Zig programming language
+
+zig-cache/
+zig-out/
+build/
+build-*/
+docgen_tmp/
+
+# End of https://www.toptal.com/developers/gitignore/api/zig
