--- a/.github/workflows/zig_test.yml
+++ b/.github/workflows/zig_test.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           version: 0.13.0
       - run: sudo apt-get update -y
-      - run: sudo apt-get install -y libsdl2-dev
+      - run: sudo apt-get install -y libsdl2-dev glslang-tools
       - run: zig build check
   fmt:
     runs-on: ubuntu-latest
