--- a/.github/workflows/zig_test.yml
+++ b/.github/workflows/zig_test.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: mlugg/setup-zig@v1
       - run: sudo apt-get update -y
-      - run: sudo apt-get install -y libsdl2-dev glslang-tools
+      - run: sudo apt-get install -y libglfw3-dev glslang-tools
       - run: zig build check
   fmt:
     runs-on: ubuntu-latest
