--- a/.github/workflows/zig_test.yml
+++ b/.github/workflows/zig_test.yml
@@ -19,8 +19,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: mlugg/setup-zig@v1
       - run: sudo apt-get update -y
-      - run: sudo apt-get install -y \
-          libglfw3-dev glslang-tools fontconfig
+      - run: sudo apt-get install -y libglfw3-dev glslang-tools fontconfig
       - run: zig build check
   fmt:
     runs-on: ubuntu-latest
