--- a/.github/workflows/zig_test.yml
+++ b/.github/workflows/zig_test.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: mlugg/setup-zig@v1
       - run: sudo apt-get update -y
       - run: sudo apt-get install -y libglfw3-dev glslang-tools fontconfig
-      - run: zig build check
+      - run: zig build check --verbose
   fmt:
     runs-on: ubuntu-latest
     steps:
