--- a/.github/workflows/zig_test.yml
+++ b/.github/workflows/zig_test.yml
@@ -18,6 +18,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: mlugg/setup-zig@v1
+        with:
+          version: master
       - run: sudo apt-get update -y
       - run: sudo apt-get install -y libglfw3-dev glslang-tools libfontconfig-dev
       - run: zig build check --verbose
@@ -26,4 +28,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: mlugg/setup-zig@v1
+        with:
+          version: master
       - run: zig fmt --check src/
